# taskflow

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DOCKER.md  README.md  docker-compose.prod.yml  docker-compose.yml  test-e2e.sh
.claude/agents/: backend-developer.md  code-reviewer.md  devops-engineer.md  frontend-developer.md  qa-engineer.md  technical-writer.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6aafea0ccb93_add_initial_models.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  health.py  projects.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  comment.py  project.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  comment.py  project.py  task.py  user.py
backend/app/services/: comment.py  project.py  task.py  user.py
backend/app/tests/: conftest.py  test_auth.py  test_e2e_integration.py  test_health.py  test_projects.py  test_tasks.py
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  DEPLOYMENT.md  DEVELOPMENT.md
docs/plans/: 000-initial-scaffolding.md  001-database-models.md  kanban-board-ui-implementation.md
docs/test-reports/: TESTING_GUIDE.md  e2e-integration-test-report.md  integration-test-report-2026-02-11.md  (+1 more)
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx  (+1 more)
nginx/: nginx.conf
scripts/: check-all.sh  install-hooks.sh
(+19 files in other folders)
