[project]
name = "taskflow-backend"
version = "0.1.0"
description = "TaskFlow Backend API"
requires-python = ">=3.12"

[tool.ruff]
# Python 3.12
target-version = "py312"

# 최대 라인 길이
line-length = 100

# 제외할 디렉토리
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "alembic/versions",
    "*.pyc",
]

[tool.ruff.lint]
# 활성화할 규칙
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# 무시할 규칙
ignore = [
    "E501",  # 라인 길이는 formatter가 처리
    "B008",  # FastAPI Depends()를 위해
]

[tool.ruff.lint.per-file-ignores]
# 테스트 파일에서는 일부 규칙 무시
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# 문자열 따옴표 설정
quote-style = "double"

# 들여쓰기 스타일
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
